[gd_scene load_steps=4 format=3 uid="uid://d0it6wxxspq0d"]

[ext_resource type="Script" uid="uid://bvpue1546u8dm" path="res://room.gd" id="1_4o3f6"]
[ext_resource type="Texture2D" uid="uid://cas2slmxcsj4x" path="res://Assets/Extremely fast dungeon mock.jpg" id="1_bisa2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5vuv"]
size = Vector2(80.9375, 101.375)

[node name="Room" type="Node2D"]
script = ExtResource("1_4o3f6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(963.62494, 533)
scale = Vector2(0.5725902, 0.51490384)
texture = ExtResource("1_bisa2")

[node name="WestDoor" type="Area2D" parent="."]
position = Vector2(207, 530)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestDoor"]
position = Vector2(-11.5, 15.375)
shape = SubResource("RectangleShape2D_v5vuv")

[node name="EastDoor" type="Area2D" parent="."]
position = Vector2(1707, 553)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastDoor"]
position = Vector2(-7.53125, -11)
shape = SubResource("RectangleShape2D_v5vuv")

[node name="NorthDoor" type="Area2D" parent="."]
position = Vector2(930, 61)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthDoor"]
position = Vector2(16.25, -23.5)
shape = SubResource("RectangleShape2D_v5vuv")

[node name="SouthDoor" type="Area2D" parent="."]
position = Vector2(968, 1000)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthDoor"]
position = Vector2(-10, -11)
shape = SubResource("RectangleShape2D_v5vuv")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(236, 91)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-1.5157776, 1.6303406)
polygon = PackedVector2Array(-4.4842224, -3.6303406, -1.4842224, 360.36966, -73.48422, 350.36966, -70.48422, -47.63034, 594.51575, -57.63034, 635.51575, 0.36965942)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(233, 938)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2(-1.5157776, 1.6303406)
polygon = PackedVector2Array(-0.4842224, -319.63037, -70.48422, -311.63037, -81.48422, 68.36963, 595.51575, 79.36963, 624.51575, 1.3696289, 6.5157776, -2.630371)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(233, 938)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
position = Vector2(1073, 20.99997)
polygon = PackedVector2Array(355, -329, 352, -35, -241, -19, -207, 53, 451, 43, 451, -315)

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(1663, 108)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D4"]
position = Vector2(18, -16)
polygon = PackedVector2Array(-4, -15, 1, -8, -637, -4, -618, -73, 103, -55, 88, 329, -6, 365)

[connection signal="body_entered" from="WestDoor" to="." method="_on_west_door_body_entered"]
[connection signal="body_entered" from="EastDoor" to="." method="_on_east_door_body_entered"]
[connection signal="body_entered" from="NorthDoor" to="." method="_on_north_door_body_entered"]
[connection signal="body_entered" from="SouthDoor" to="." method="_on_south_door_body_entered"]
